sub rectangle checking done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "types.h": "c",
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "fcntl.h": "c"
     }
 }
