cleaned the code and added the breaking out of all loops when incompatibility occured

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "types.h": "c",
         "ctype.h": "c",
-        "fcntl.h": "c"
+        "fcntl.h": "c",
+        "unistd.h": "c"
     }
 }
